force-app/main/default/objects/Project__c/fields/Assigned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Amount__c</fullName>
    <description>Estimated project cost based on current assigned hours per resource</description>
    <label>Assigned Amount</label>
    <summarizedField>Project_Line_Item__c.Assigned_Amount__c</summarizedField>
    <summaryForeignKey>Project_Line_Item__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>