force-app/main/default/objects/Project__c/fields/Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount__c</fullName>
    <label>Current Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>