force-app/main/default/objects/Project__c/fields/Estimated_Profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Profit__c</fullName>
    <formula>Estimated_Amount__c -  Assigned_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>