force-app/main/default/objects/Project__c/fields/isCurrentUserSquadLead__c.field-meta.xml
<CustomField>
    <fullName>isCurrentUserSquadLead__c</fullName>
    <formula>$User.Id  =  Squad_Lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCurrentUserSquadLead</label>
    <type>Checkbox</type>
</CustomField>