force-app/main/default/objects/Project__c/listViews/My_Project.listView-meta.xml
<ListView>
    <fullName>My_Project</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Project</label>
    <sharedTo>
        <group>OnlyMyProjects</group>
        <role>Project_Manager</role>
    </sharedTo>
</ListView>