force-app/main/default/objects/Project__c/listViews/myProjects.listView-meta.xml
<ListView>
    <fullName>myProjects</fullName>
    <columns>NAME</columns>
    <columns>Estimated_Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Stage__c</columns>
    <filterScope>Mine</filterScope>
    <label>myProjects</label>
</ListView>