force-app/main/default/objects/Project__c/listViews/myProjectsWithTasks.listView-meta.xml
<ListView>
    <fullName>myProjectsWithTasks</fullName>
    <columns>NAME</columns>
    <filterScope>ScopingRule</filterScope>
    <label>myProjectsWithTasks</label>
</ListView>